Draft: More drafts on the For Researchers page

--- a/for_researchers2b.html
+++ b/for_researchers2b.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="styles/all.css" media="all">
     <link rel="stylesheet" type="text/css" href="styles/announcementBanner.css" media="all">
     <link rel="stylesheet" type="text/css" href="styles/forresearchers2.css" media="all">
-    <link rel="stylesheet" type="text/css" href="styles/header2.css" media="all">
+    <link rel="stylesheet" type="text/css" href="styles/header2b.css" media="all">
     <link rel="stylesheet" type="text/css" href="styles/footer.css" media="all">
     <meta name='twitter:card' content="summary">
     <meta name='twitter:title' content="Social Media TestDrive">
@@ -75,11 +75,14 @@
                     <li class="nav-item">
                         <a class="nav-link" href="for_parents.html">For Parents</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="for_researchers2.html">For Researchers</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="research.html">TestDrive Studies</a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                          Research
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="for_researchers2.html">For Researchers</a>
+                            <a class="dropdown-item" href="research.html">Our Research</a>
+                        </div>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="faq.html">FAQ</a>
