Test: Add flyer to homepage

--- a/index2.html
+++ b/index2.html
@@ -201,7 +201,7 @@
                         </button>
                     </a>
                     <br/>
-                    <a style="text-decoration:none;" href="Test Drive Flyer.pdf">
+                    <a style="text-decoration:none;" href="Test Drive Flyer.pdf" target="_blank">
                         <button class="nicelyRoundedButton-large" type="button" style="margin:6px 0 3px 0; ">
                             <svg xmlns="http://www.w3.org/2000/svg"  width="20" height="20"  fill="currentColor" class="bi bi-box-arrow-up-right" viewBox="0 0 16 16" style="margin:0 6px 0 0;">
                                 <path fill-rule="evenodd" d="M8.636 3.5a.5.5 0 0 0-.5-.5H1.5A1.5 1.5 0 0 0 0 4.5v10A1.5 1.5 0 0 0 1.5 16h10a1.5 1.5 0 0 0 1.5-1.5V7.864a.5.5 0 0 0-1 0V14.5a.5.5 0 0 1-.5.5h-10a.5.5 0 0 1-.5-.5v-10a.5.5 0 0 1 .5-.5h6.636a.5.5 0 0 0 .5-.5z"/>
