--- a/for_researchers.html
+++ b/for_researchers.html
@@ -76,7 +76,10 @@
                         <a class="nav-link" href="for_parents.html">For Parents</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="research.html">Research</a>
+                        <a class="nav-link" href="for_researchers.html">For Researchers</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="research.html">TestDrive Studies</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="faq.html">FAQ</a>
@@ -119,19 +122,13 @@
                 </p>
             </div>
 
-            <div class="col text-center">
+            <div class="col text-center paddedRow-small">
                 <h1>How to use TestDrive for your research</h1>
             </div>
             <!-- Content Row 1-->
-            <div class="row align-items-center justify-content-center paddedRow">
-
-                <div class="col-md-2">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="75%" height="auto" fill="#0093EC" class="bi bi-1-circle-fill" viewBox="0 0 16 16">
-                        <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0ZM9.283 4.002H7.971L6.072 5.385v1.271l1.834-1.318h.065V12h1.312V4.002Z"/>
-                      </svg>
-                </div>
-                <div class='col-md-6'>
-                    <h2>Complete this questionnaire to let us know about your plans to use Social Media TestDrive for research.</h2>
+            <div class=" row align-items-center justify-content-center paddedRow-small">
+                <div class='col-md-10'>
+                    <h2>1. Complete this questionnaire to let us know about your plans to use Social Media TestDrive for research.</h2>
                     <h4>
                         This questionnaire is a non-binding survey that gives us a better understanding of how researchers are using the platform.
                     </h4>
@@ -159,53 +156,40 @@
             </div>
 
             <!-- Content Row 2 -->
-            <div class="row align-items-center justify-content-center paddedRow">
-                <div class="col-md-2">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="75%" height="auto" fill="#0093EC" class="bi bi-2-circle-fill" viewBox="0 0 16 16">
-                        <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0ZM6.646 6.24c0-.691.493-1.306 1.336-1.306.756 0 1.313.492 1.313 1.236 0 .697-.469 1.23-.902 1.705l-2.971 3.293V12h5.344v-1.107H7.268v-.077l1.974-2.22.096-.107c.688-.763 1.287-1.428 1.287-2.43 0-1.266-1.031-2.215-2.613-2.215-1.758 0-2.637 1.19-2.637 2.402v.065h1.271v-.07Z"/>
-                      </svg>
-                </div>
-                <div class='col-md-6'>
-                    <h2>Use our published research and findings to guide your research study.</h2>
+            <div class="row align-items-center justify-content-center paddedRow-small">
+                <div class='col-md-10'>
+                    <h2>2. Use our published research and findings to guide your research study.</h2>
                     <h4>
                         The following published papers give an overview and history of Social Media TestDrive and the underlying theory behind the platform. The last paper also provides a developed and validated inventory of social media literacy measures.
                     </h4>
                     <h4>
-                        DiFranzo, D., Choi, Y.H., Purington, A., Taft, J.G., Whitlock, J., Bazarova, N.N. (2019). <a href="https://dl.acm.org/doi/10.1145/3290605.3300533">Social Media TestDrive: Real-World social media education for the next generation.</a>                        In Proceedings of the 2019 ACM Conference on Human Factors in Computing Systems (CHI’19). Glasgow, UK.
+                        DiFranzo, D., Choi, Y.H., Purington, A., Taft, J.G., Whitlock, J., Bazarova, N.N. (2019). <a href="Social Media TestDrive - paper1.pdf">Social Media TestDrive: Real-World social media education for the next generation.</a> In Proceedings
+                        of the 2019 ACM Conference on Human Factors in Computing Systems (CHI’19). Glasgow, UK.
                     </h4>
                     <h4>
-                        Purington Drake, A., Masur, P.K., Bazarova, N.N., Zou, E., & Whitlock, J. (in press). <a href="https://www.tandfonline.com/doi/full/10.1080/17482798.2023.2230493">The Youth Social Media Literacy Scale: Scale Development and Validation Using Item Response Theory.</a>                        Journal of Children and Media.
+                        Purington Drake, A., Masur, P.K., Bazarova, N.N., Zou, E., & Whitlock, J. (in press). <a href="The youth social media literacy inventory development and validation using item response theory in the US  - paper2.pdf">The Youth Social Media Literacy Scale: Scale Development and Validation Using Item Response Theory.</a>                        Journal of Children and Media.
                     </h4>
                 </div>
             </div>
 
             <!-- Content Row 3-->
-            <div class="row align-items-center justify-content-center paddedRow">
-                <div class="col-md-2">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="75%" height="auto" fill="#0093EC" class="bi bi-3-circle-fill" viewBox="0 0 16 16">
-                        <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0Zm-8.082.414c.92 0 1.535.54 1.541 1.318.012.791-.615 1.36-1.588 1.354-.861-.006-1.482-.469-1.54-1.066H5.104c.047 1.177 1.05 2.144 2.754 2.144 1.653 0 2.954-.937 2.93-2.396-.023-1.278-1.031-1.846-1.734-1.916v-.07c.597-.1 1.505-.739 1.482-1.876-.03-1.177-1.043-2.074-2.637-2.062-1.675.006-2.59.984-2.625 2.12h1.248c.036-.556.557-1.054 1.348-1.054.785 0 1.348.486 1.348 1.195.006.715-.563 1.237-1.342 1.237h-.838v1.072h.879Z"/>
-                      </svg>
-                </div>
-                <div class='col-md-6'>
-                    <h2>Cite Social Media TestDrive in your research paper.</h2>
+            <div class="row align-items-center justify-content-center paddedRow-small">
+                <div class='col-md-10'>
+                    <h2>3. Cite Social Media TestDrive in your research paper.</h2>
                     <h4>
                         You may use the following citation:
                     </h4>
                     <h4>
-                        DiFranzo, D., Choi, Y.H., Purington, A., Taft, J.G., Whitlock, J., Bazarova, N.N. (2019). <a href="https://dl.acm.org/doi/10.1145/3290605.3300533">Social Media TestDrive: Real-World social media education for the next generation.</a>                        In Proceedings of the 2019 ACM Conference on Human Factors in Computing Systems (CHI’19). Glasgow, UK.
+                        DiFranzo, D., Choi, Y.H., Purington, A., Taft, J.G., Whitlock, J., Bazarova, N.N. (2019). <a href="Social Media TestDrive - paper1.pdf">Social Media TestDrive: Real-World social media education for the next generation.</a> In Proceedings
+                        of the 2019 ACM Conference on Human Factors in Computing Systems (CHI’19). Glasgow, UK.
                     </h4>
                 </div>
             </div>
 
             <!-- Content Row 4 -->
-            <div class="row align-items-center justify-content-center paddedRow">
-                <div class="col-md-2">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="75%" height="auto" fill="#0093EC" class="bi bi-4-circle-fill" viewBox="0 0 16 16">
-                        <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0ZM7.519 5.057c-.886 1.418-1.772 2.838-2.542 4.265v1.12H8.85V12h1.26v-1.559h1.007V9.334H10.11V4.002H8.176c-.218.352-.438.703-.657 1.055ZM6.225 9.281v.053H8.85V5.063h-.065c-.867 1.33-1.787 2.806-2.56 4.218Z"/>
-                      </svg>
-                </div>
-                <div class='col-md-6'>
-                    <h2>Share your findings with us through email!</h2>
+            <div class="row align-items-center justify-content-center paddedRow-small">
+                <div class='col-md-10'>
+                    <h2>4. Share your findings with us through email!</h2>
                     <h4>
                         We would love to hear about your study findings and contribution to the research community. Please email us a study report after you have completed your study to <a href="mailto:socialmediatestdrive@gmail.com" target="_top">socialmediatestdrive@gmail.com</a>.
                     </h4>
@@ -213,14 +197,9 @@
             </div>
 
             <!-- Content Row 5 -->
-            <div class="row align-items-center justify-content-center paddedRow">
-                <div class="col-md-2">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="75%" height="auto" fill="#0093EC" class="bi bi-5-circle-fill" viewBox="0 0 16 16">
-                                    <path d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0Zm-8.006 4.158c1.74 0 2.924-1.119 2.924-2.806 0-1.641-1.178-2.584-2.56-2.584-.897 0-1.442.421-1.612.68h-.064l.193-2.344h3.621V4.002H5.791L5.445 8.63h1.149c.193-.358.668-.809 1.435-.809.85 0 1.582.604 1.582 1.57 0 1.085-.779 1.682-1.57 1.682-.697 0-1.389-.31-1.53-1.031H5.276c.065 1.213 1.149 2.115 2.72 2.115Z"/>
-                                  </svg>
-                </div>
-                <div class='col-md-6'>
-                    <h2>Consider donating to Social Media TestDrive</h2>
+            <div class="row align-items-center justify-content-center paddedRow-small">
+                <div class='col-md-10'>
+                    <h2>5. Consider donating to Social Media TestDrive</h2>
                     <h4>
                         Lastly, while Social Media TestDrive is a free resource, we appreciate and rely on donations to keep it active and cover the service and support costs. Feel free to make a donation <a href="donate.html">here</a>. </h4>
                 </div>
@@ -237,7 +216,7 @@
 
                 <!-- Subtitle  -->
                 <div class="row justify-content-center">
-                    <div class="col-sm-8 col-md-8 col-lg-4 text-center">
+                    <div class="col-sm-8 col-md-10 col-lg-4 text-center">
                         <h4>
                             Check out our
                             <a href="testdriveguide.pdf" target="_none">Educator Guide</a> and
@@ -257,39 +236,6 @@
                     </div>
                 </div>
             </div>
-
-            <!-- Join List-serv Section -->
-            <!-- <div class="container-fluid"> -->
-            <!-- Title -->
-            <!-- <div class="row paddedTop justify-content-center">
-                    <div class="col text-center">
-                        <h1> Want to find out more? </h1>
-                    </div>
-                </div> -->
-
-            <!-- Subtext -->
-            <!-- <div class="row justify-content-center">
-                    <div class="col-sm-8 col-md-8 col-lg-4 text-center">
-                        <h4 class="listServSubtext">
-                            You can join our e-mail listserv to hear the latest news about Social Media TestDrive.
-                        </h4>
-                        <h4>
-                            Click the button below and press "Send" to join.
-                        </h4>
-                    </div>
-                </div> -->
-
-            <!-- Join List-serv Button -->
-            <!-- <div class="row addPaddingBottom justify-content-center">
-                    <div class="col d-flex justify-content-center">
-                        <a href="mailto:TESTDRIVE-L-request@cornell.edu?Subject=Join" target="_top" class="customHyperlink">
-                            <button type="button" class="nicelyRoundedButton">
-                Sign up
-              </button>
-                        </a>
-                    </div>
-                </div>
-            </div> -->
         </div>
     </main>
     <footer class="page-footer footerVerB">
