Final draft of For Researchers page: fix nav-item css

--- a/for_researchers.html
+++ b/for_researchers.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="styles/all.css" media="all">
     <link rel="stylesheet" type="text/css" href="styles/announcementBanner.css" media="all">
     <link rel="stylesheet" type="text/css" href="styles/forresearchers.css" media="all">
-    <link rel="stylesheet" type="text/css" href="styles/header.css" media="all">
+    <link rel="stylesheet" type="text/css" href="styles/header2b.css" media="all">
     <link rel="stylesheet" type="text/css" href="styles/footer.css" media="all">
     <meta name='twitter:card' content="summary">
     <meta name='twitter:title' content="Social Media TestDrive">
