Update For Researchers citation

--- a/for_researchers.html
+++ b/for_researchers.html
@@ -164,10 +164,10 @@
                     </h4>
                     <h4>
                         DiFranzo, D., Choi, Y.H., Purington, A., Taft, J.G., Whitlock, J., Bazarova, N.N. (2019). <a href="Social Media TestDrive - paper1.pdf">Social Media TestDrive: Real-World social media education for the next generation.</a> In Proceedings
-                        of the 2019 ACM Conference on Human Factors in Computing Systems (CHI’19). Glasgow, UK.
+                        of the 2019 ACM Conference on Human Factors in Computing Systems (CHI'19). Glasgow, UK.
                     </h4>
-                    <h4>
-                        Purington Drake, A., Masur, P.K., Bazarova, N.N., Zou, E., & Whitlock, J. (in press). <a href="The youth social media literacy inventory development and validation using item response theory in the US  - paper2.pdf">The Youth Social Media Literacy Scale: Scale Development and Validation Using Item Response Theory.</a>                        Journal of Children and Media.
+                    <h4> Purington Drake, A., Masur, P.K., Bazarova, N.N., Zou, E., & Whitlock, J. (2023). <a href="The youth social media literacy inventory development and validation using item response theory in the US  - paper2.pdf">The Youth Social Media Literacy Scale: Scale Development and Validation Using Item Response Theory.</a>                        Journal of Children and Media.
+                        <a href="https://doi.org/10.1080/17482798.2023.2230493"> https://doi.org/10.1080/17482798.2023.2230493</a>
                     </h4>
                 </div>
             </div>
@@ -181,7 +181,7 @@
                     </h4>
                     <h4>
                         DiFranzo, D., Choi, Y.H., Purington, A., Taft, J.G., Whitlock, J., Bazarova, N.N. (2019). <a href="Social Media TestDrive - paper1.pdf">Social Media TestDrive: Real-World social media education for the next generation.</a> In Proceedings
-                        of the 2019 ACM Conference on Human Factors in Computing Systems (CHI’19). Glasgow, UK.
+                        of the 2019 ACM Conference on Human Factors in Computing Systems (CHI'19). Glasgow, UK.
                     </h4>
                 </div>
             </div>
