Make For Researchers page live

--- a/for_researchers.html
+++ b/for_researchers.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" type="text/css" href="styles/all.css" media="all">
     <link rel="stylesheet" type="text/css" href="styles/announcementBanner.css" media="all">
     <link rel="stylesheet" type="text/css" href="styles/forresearchers.css" media="all">
-    <link rel="stylesheet" type="text/css" href="styles/header2b.css" media="all">
+    <link rel="stylesheet" type="text/css" href="styles/header.css" media="all">
     <link rel="stylesheet" type="text/css" href="styles/footer.css" media="all">
     <meta name='twitter:card' content="summary">
     <meta name='twitter:title' content="Social Media TestDrive">
@@ -79,7 +79,7 @@
                         <a class="nav-link" href="for_researchers.html">For Researchers</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="research.html">TestDrive Studies</a>
+                        <a class="nav-link" href="testdrive_studies.html">TestDrive Studies</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="faq.html">FAQ</a>
@@ -127,7 +127,7 @@
             </div>
             <!-- Content Row 1-->
             <div class=" row align-items-center justify-content-center paddedRow-small">
-                <div class='col-md-10'>
+                <div class='col-md-11'>
                     <h2>1. Complete this questionnaire to let us know about your plans to use Social Media TestDrive for research.</h2>
                     <h4>
                         This questionnaire is a non-binding survey that gives us a better understanding of how researchers are using the platform.
@@ -157,7 +157,7 @@
 
             <!-- Content Row 2 -->
             <div class="row align-items-center justify-content-center paddedRow-small">
-                <div class='col-md-10'>
+                <div class='col-md-11'>
                     <h2>2. Use our published research and findings to guide your research study.</h2>
                     <h4>
                         The following published papers give an overview and history of Social Media TestDrive and the underlying theory behind the platform. The last paper also provides a developed and validated inventory of social media literacy measures.
@@ -174,7 +174,7 @@
 
             <!-- Content Row 3-->
             <div class="row align-items-center justify-content-center paddedRow-small">
-                <div class='col-md-10'>
+                <div class='col-md-11'>
                     <h2>3. Cite Social Media TestDrive in your research paper.</h2>
                     <h4>
                         You may use the following citation:
@@ -188,7 +188,7 @@
 
             <!-- Content Row 4 -->
             <div class="row align-items-center justify-content-center paddedRow-small">
-                <div class='col-md-10'>
+                <div class='col-md-11'>
                     <h2>4. Share your findings with us through email!</h2>
                     <h4>
                         We would love to hear about your study findings and contribution to the research community. Please email us a study report after you have completed your study to <a href="mailto:socialmediatestdrive@gmail.com" target="_top">socialmediatestdrive@gmail.com</a>.
@@ -198,7 +198,7 @@
 
             <!-- Content Row 5 -->
             <div class="row align-items-center justify-content-center paddedRow-small">
-                <div class='col-md-10'>
+                <div class='col-md-11'>
                     <h2>5. Consider donating to Social Media TestDrive</h2>
                     <h4>
                         Lastly, while Social Media TestDrive is a free resource, we appreciate and rely on donations to keep it active and cover the service and support costs. Feel free to make a donation <a href="donate.html">here</a>. </h4>
