--- a/testdrive_studies.html
+++ b/testdrive_studies.html
@@ -75,7 +75,10 @@
                         <a class="nav-link" href="for_parents.html">For Parents</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="research.html">Research</a>
+                        <a class="nav-link" href="for_researchers.html">For Researchers</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="testdrive_studies.html">TestDrive Studies</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="faq.html">FAQ</a>
@@ -96,7 +99,6 @@
                         </a>
                     </li>
                 </ul>
-
             </div>
         </nav>
     </header>
@@ -106,7 +108,7 @@
             <!-- Section Title -->
             <div class="row justify-content-center pageSectionTitle">
                 <div class="col-sm-12 col-md-10 col-lg-10 text-center">
-                    <h1> Research </h1>
+                    <h1> TestDrive Studies </h1>
                 </div>
             </div>
 
@@ -127,7 +129,7 @@
             <!-- Section Title -->
             <div class="row justify-content-center pageSectionTitle">
                 <div class="col-sm-12 col-md-10 col-lg-10 text-center">
-                    <h1> Participate in Our Ongoing Research </h1>
+                    <h1> Participate in our ongoing research</h1>
                 </div>
             </div>
 
