--- a/terms.html
+++ b/terms.html
@@ -75,7 +75,10 @@
                         <a class="nav-link" href="for_parents.html">For Parents</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="research.html">Research</a>
+                        <a class="nav-link" href="for_researchers.html">For Researchers</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="testdrive_studies.html">TestDrive Studies</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="faq.html">FAQ</a>
