--- a/webinars.html
+++ b/webinars.html
@@ -76,7 +76,10 @@
                         <a class="nav-link" href="for_parents.html">For Parents</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="research.html">Research</a>
+                        <a class="nav-link" href="for_researchers.html">For Researchers</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="testdrive_studies.html">TestDrive Studies</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="faq.html">FAQ</a>
@@ -90,14 +93,13 @@
                             <!-- Copied HTML from: https://icons.getbootstrap.com/icons/heart-fill/ -->
                             <!-- Altered the width, height, and fill -->
                             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="#0093EC" class="bi bi-suit-heart-fill donationHeart" viewBox="0 0 16 16">
-                                <path
-                                    d="M4 1c2.21 0 4 1.755 4 3.92C8 2.755 9.79 1 12 1s4 1.755 4 3.92c0 3.263-3.234 4.414-7.608 9.608a.513.513 0 0 1-.784 0C3.234 9.334 0 8.183 0 4.92 0 2.755 1.79 1 4 1z" />
-                            </svg>
+                <path
+                  d="M4 1c2.21 0 4 1.755 4 3.92C8 2.755 9.79 1 12 1s4 1.755 4 3.92c0 3.263-3.234 4.414-7.608 9.608a.513.513 0 0 1-.784 0C3.234 9.334 0 8.183 0 4.92 0 2.755 1.79 1 4 1z" />
+              </svg>
                             <b>Donate</b>
                         </a>
                     </li>
                 </ul>
-
             </div>
         </nav>
     </header>
