Draft: Add banner to home page

--- a/index copy.html
+++ b/index copy.html
@@ -199,7 +199,7 @@
                     <div class="col-12 d-flex d-sm-none justify-content-center align-items-center">
                         <img class="sm-img" src="img/1million_v4.svg" alt="Logo of Giving Tuesday" height="50px">
                     </div>
-                    <div class="col-12 d-flex align-items-center justify-content-center">
+                    <div class="col-12 d-flex align-items-center">
                         <!-- Hide when screen is sm or smaller -->
                         <img class="d-none d-sm-block md-img" src="img/1million_v4.svg" alt="" height="50px">
                         <p>
@@ -230,7 +230,7 @@
                     <div class="col-12 d-flex d-sm-none justify-content-center align-items-center">
                         <img class="sm-img" src="img/1million_v4.svg" alt="Logo of Giving Tuesday" height="50px">
                     </div>
-                    <div class="col-12 d-flex align-items-center justify-content-center">
+                    <div class="col-12 d-flex align-items-center">
                         <!-- Hide when screen is sm or smaller -->
                         <img class="d-none d-sm-block md-img" src="img/1million_v4.svg" alt="" height="50px">
                         <p>
