--- a/index.html
+++ b/index.html
@@ -118,31 +118,28 @@
 
             <!-- Temporary Announcement Banner -->
             <!-- Comment out when no longer needed -->
-            <!-- <div class="row align-items-center announcementBanner">
-                <div class="col-12 d-flex align-items-center"> -->
-            <!-- Free, open source bootstrap icon: circle fill -->
-            <!-- Copied HTML from: https://icons.getbootstrap.com/icons/circle-fill/ -->
-            <!-- Altered the width, height, and fill -->
-            <!-- <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#E94B68" class="bi bi-circle-fill topLeftCircle" viewBox="0 0 16 16">
+            <div class="row align-items-center announcementBanner">
+                <div class="col-12 d-flex align-items-center">
+                    <!-- Free, open source bootstrap icon: circle fill -->
+                    <!-- Copied HTML from: https://icons.getbootstrap.com/icons/circle-fill/ -->
+                    <!-- Altered the width, height, and fill -->
+                    <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#E94B68" class="bi bi-circle-fill topLeftCircle" viewBox="0 0 16 16">
             <circle cx="8" cy="8" r="8" />
-          </svg> -->
-            <!-- Free, open source bootstrap icon: megaphone fill -->
-            <!-- Copied HTML from: https://icons.getbootstrap.com/icons/megaphone-fill/ -->
-            <!-- Altered the width, height, and fill -->
-            <!-- <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="white" class="bi bi-megaphone-fill topLeftIcon" viewBox="0 0 16 16">
+          </svg>
+                    <!-- Free, open source bootstrap icon: megaphone fill -->
+                    <!-- Copied HTML from: https://icons.getbootstrap.com/icons/megaphone-fill/ -->
+                    <!-- Altered the width, height, and fill -->
+                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="white" class="bi bi-megaphone-fill topLeftIcon" viewBox="0 0 16 16">
             <path
               d="M13 2.5a1.5 1.5 0 0 1 3 0v11a1.5 1.5 0 0 1-3 0v-11zm-1 .724c-2.067.95-4.539 1.481-7 1.656v6.237a25.222 25.222 0 0 1 1.088.085c2.053.204 4.038.668 5.912 1.56V3.224zm-8 7.841V4.934c-.68.027-1.399.043-2.008.053A2.02 2.02 0 0 0 0 7v2c0 1.106.896 1.996 1.994 2.009a68.14 68.14 0 0 1 .496.008 64 64 0 0 1 1.51.048zm1.39 1.081c.285.021.569.047.85.078l.253 1.69a1 1 0 0 1-.983 1.187h-.548a1 1 0 0 1-.916-.599l-1.314-2.48a65.81 65.81 0 0 1 1.692.064c.327.017.65.037.966.06z" />
-          </svg> -->
-            <!-- Announcement Banner Text -->
-            <!-- <p style="word-break: break-word; white-space: normal;">
-                        <span class="largeText boldText">NOW recruiting educators!</span> Help us learn how AI can help teach teens how to navigate social media safely and responsibly, by trying out the latest GPT-based educational chatbot builder and
-                        building a chatbot. No technical background necessary. As a thank you, you will receive a
-                        <span class="boldText">$25 Amazon e-voucher</span>.
-                        <span class="boldText">Click <a href="convoai_chatbot_research_opp.pdf" target="_blank" class="customHyperlink">here</a> for more information or contact
-                        <a href="mailto:mah499@cornell.edu" target="_top" class="customHyperlink">mah499@cornell.edu</a> to learn more!</span>
+          </svg>
+                    <!-- Announcement Banner Text -->
+                    <p style="word-break: break-word; white-space: normal;">
+                        <span class="boldText">Share your experience using TestDrive!</span> We value the feedback of educators, youth workers, parents, and other adults using Social Media TestDrive. We will reach out to eligible individuals who fill
+                        out the form <a href="https://cornell.ca1.qualtrics.com/jfe/form/SV_7WkHNyeuxZSWesS" target="_blank" class="custonHyperlink">here</a> to participate in an interview. You will receive a <span class="boldText">$30 Amazon e-gift card</span>                        as a thank you! Please <a href="mailto:vb292@cornell.edu?subject=Hatch%20SMTD%20Question" target="_blank">contact us</a> (vn292@cornell.edu) with any questions!</span>
                     </p>
                 </div>
-            </div> -->
+            </div>
 
             <!-- Temporary Giving Day/ Donation Banner -->
             <!-- Comment out when no longer needed -->
@@ -179,34 +176,34 @@
             </div> -->
 
             <!-- Comment out when no longer needed -->
-            <div class="row align-items-center announcementBanner">
-                <div class="col-12 d-flex align-items-center flex-column">
-                    <!-- Free, open source bootstrap icon: circle fill -->
-                    <!-- Copied HTML from: https://icons.getbootstrap.com/icons/circle-fill/ -->
-                    <!-- Altered the width, height, and fill -->
-                    <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#E94B68" class="bi bi-circle-fill topLeftCircle" viewBox="0 0 16 16">
+            <!-- <div class="row align-items-center announcementBanner">
+                <div class="col-12 d-flex align-items-center flex-column"> -->
+            <!-- Free, open source bootstrap icon: circle fill -->
+            <!-- Copied HTML from: https://icons.getbootstrap.com/icons/circle-fill/ -->
+            <!-- Altered the width, height, and fill -->
+            <!-- <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="#E94B68" class="bi bi-circle-fill topLeftCircle" viewBox="0 0 16 16">
                                     <circle cx="8" cy="8" r="8" />
-                                  </svg>
-                    <!-- Free, open source bootstrap icon: megaphone fill -->
-                    <!-- Copied HTML from: https://icons.getbootstrap.com/icons/megaphone-fill/ -->
-                    <!-- Altered the width, height, and fill -->
-                    <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="white" class="bi bi-megaphone-fill topLeftIcon" viewBox="0 0 16 16">
+                                  </svg> -->
+            <!-- Free, open source bootstrap icon: megaphone fill -->
+            <!-- Copied HTML from: https://icons.getbootstrap.com/icons/megaphone-fill/ -->
+            <!-- Altered the width, height, and fill -->
+            <!-- <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="white" class="bi bi-megaphone-fill topLeftIcon" viewBox="0 0 16 16">
                                     <path
                                       d="M13 2.5a1.5 1.5 0 0 1 3 0v11a1.5 1.5 0 0 1-3 0v-11zm-1 .724c-2.067.95-4.539 1.481-7 1.656v6.237a25.222 25.222 0 0 1 1.088.085c2.053.204 4.038.668 5.912 1.56V3.224zm-8 7.841V4.934c-.68.027-1.399.043-2.008.053A2.02 2.02 0 0 0 0 7v2c0 1.106.896 1.996 1.994 2.009a68.14 68.14 0 0 1 .496.008 64 64 0 0 1 1.51.048zm1.39 1.081c.285.021.569.047.85.078l.253 1.69a1 1 0 0 1-.983 1.187h-.548a1 1 0 0 1-.916-.599l-1.314-2.48a65.81 65.81 0 0 1 1.692.064c.327.017.65.037.966.06z" />
-                                  </svg>
-                    <!-- announcement Banner Text -->
-                    <!-- Show only when screen is sm or smaller -->
-                    <div class="col-12 d-flex d-sm-none justify-content-center align-items-center">
+                                  </svg> -->
+            <!-- announcement Banner Text -->
+            <!-- Show only when screen is sm or smaller -->
+            <!-- <div class="col-12 d-flex d-sm-none justify-content-center align-items-center">
                         <img class="sm-img" src="img/1million.svg" alt="Logo of Giving Tuesday" height="50px">
                     </div>
-                    <div class="col-12 d-flex align-items-center">
-                        <!-- Hide when screen is sm or smaller -->
-                        <img class="d-none d-sm-block md-img" src="img/1million.svg" alt="" height="50px">
+                    <div class="col-12 d-flex align-items-center"> -->
+            <!-- Hide when screen is sm or smaller -->
+            <!-- <img class="d-none d-sm-block md-img" src="img/1million.svg" alt="" height="50px">
                         <p>
                             <span class="boldText">We have reached over 1 million learners on TestDrive!</span> Thank you for joining us in our mission to prepare young people for the online world!</p>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
             <!-- Top Content Row -->
             <div class="row paddedRow align-items-center">
