Add Summer 2024 study to TestDrive Studies page

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                     <!-- Announcement Banner Text -->
                     <p style="word-break: break-word; white-space: normal;">
                         <span class="boldText">Share your experience using TestDrive!</span> We value the feedback of educators, youth workers, parents, and other adults using Social Media TestDrive. We will reach out to eligible individuals who fill
-                        out the form <a href="https://cornell.ca1.qualtrics.com/jfe/form/SV_7WkHNyeuxZSWesS" target="_blank" class="custonHyperlink">here</a> to participate in an interview. You will receive a <span class="boldText">$30 Amazon e-gift card</span>                        as a thank you! Please <a href="mailto:vb292@cornell.edu?subject=Hatch%20SMTD%20Question" target="_blank">contact us</a> (vn292@cornell.edu) with any questions!</span>
+                        out the form <a href="https://cornell.ca1.qualtrics.com/jfe/form/SV_7WkHNyeuxZSWesS" target="_blank" class="customHyperlink">here</a> to participate in an interview. You will receive a <span class="boldText">$30 Amazon e-gift card</span>                        as a thank you! Please <a href="mailto:vb292@cornell.edu?subject=Hatch%20SMTD%20Question" target="_blank">contact us</a> (vn292@cornell.edu) with any questions!</span>
                     </p>
                 </div>
             </div>
