Fix email address for summer 2024 study

--- a/testdrive_studies.html
+++ b/testdrive_studies.html
@@ -142,7 +142,7 @@
                 <br>
                 <p class="researchParagraph"> This study invites educators, youth workers, parents, and other adults who have used TestDrive with youth to participate in a virtual 30–60 minute interview. Participants are asked to share about their experience using TestDrive and to
                     provide feedback on the best uses and future implementation of TestDrive. Participation in this study is voluntary. To learn more about this study and how you can participate, <a href="https://cornell.ca1.qualtrics.com/jfe/form/SV_7WkHNyeuxZSWesS"
-                        target="_none" class="customHyperlink">please complete the survey here</a>, or email us at <a href="mailto:vb292@cornell.edu?subject=Hatch%20SMTD%20Question" target="_blank">vn292@cornell.edu</a>.
+                        target="_none" class="customHyperlink">please complete the survey here</a>, or email us at <a href="mailto:vb292@cornell.edu?subject=Hatch%20SMTD%20Question" target="_blank">vb292@cornell.edu</a>.
                 </p>
             </div>
 
