Update Team page

--- a/team.html
+++ b/team.html
@@ -236,7 +236,7 @@
                     </div>
                 </div>
                 <!-- Eunice Han -->
-                <div class="col-lg-6 addColumnPadding addRowMargin row">
+                <!-- <div class="col-lg-6 addColumnPadding addRowMargin row">
                     <div class="col-sm-4">
                         <img src="img/people/eunice_han.png" class="rounded-circle" alt="Photo of Eunice Han" width="100%">
                     </div>
@@ -246,7 +246,7 @@
                             Media Lab in the Department of Communication at Cornell University.
                         </p>
                     </div>
-                </div>
+                </div> -->
                 <!--Blank-->
                 <div class="col-lg-6 addColumnPadding addRowMargin row"></div>
             </div>
@@ -319,8 +319,8 @@
                     Other Contributors
                 </h3>
                 <p class="teamText">
-                    Nika Ablao, Carmen Chan, Erin Chen, Carina Crabbe, Richa Deshpande, Diana Freed, Danielle Freedman, Brenna Garcia, Michael Huang, Yanni Kaldis, Hyun Seo Lee, Lily Lin, Philipp Masur, Katherine Miller, Molly Nagel, Giesha Nunez, Annika Pinch, Alex Rauter,
-                    Emily Schemerhorn, Ashley Shea, Kelly Stone, Sierra Stone, Ashley Win, Cathy Xie, Cindy Xu, Tianke Zhao, Yutong Zhou, and Colton Zuvich.
+                    Nika Ablao, Carmen Chan, Erin Chen, Carina Crabbe, Richa Deshpande, Diana Freed, Danielle Freedman, Brenna Garcia, Eunice Han, Michael Huang, Yanni Kaldis, Hyun Seo Lee, Lily Lin, Philipp Masur, Katherine Miller, Molly Nagel, Giesha Nunez, Annika Pinch,
+                    Alex Rauter, Emily Schemerhorn, Ashley Shea, Kelly Stone, Sierra Stone, Ashley Win, Cathy Xie, Cindy Xu, Tianke Zhao, Yutong Zhou, and Colton Zuvich.
                 </p>
             </div>
 
