Fix bug: Header previously does not collapse properly on certain screen widths

--- a/for_educators.html
+++ b/for_educators.html
@@ -50,7 +50,7 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light">
+        <nav class="navbar navbar-light">
             <a href="index.html" class="logoLinkContainer">
                 <img src="img/testDriveLogo.svg" width="110px" height="110px" class="d-inline-block align-top testDriveLogo" alt="Social Media TestDrive Logo">
                 <span class="navbar-brand fancy d-none d-md-inline-block align-middle">
@@ -69,7 +69,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="modules.html">Modules</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item active">
                         <a class="nav-link" href="for_educators.html">For Educators</a>
                     </li>
                     <li class="nav-item">
