--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light">
+        <nav class="navbar navbar-light">
             <a href="index.html" class="logoLinkContainer">
                 <img src="img/testDriveLogo.svg" width="110px" height="110px" class="d-inline-block align-top testDriveLogo" alt="Social Media TestDrive Logo">
                 <span class="navbar-brand fancy d-none d-md-inline-block align-middle">
@@ -64,7 +64,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item d-sm-block d-lg-none">
+                    <li class="nav-item d-sm-block d-lg-none active">
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
