--- a/testdrive_studies.html
+++ b/testdrive_studies.html
@@ -49,7 +49,7 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light">
+        <nav class="navbar navbar-light">
             <a href="index.html" class="logoLinkContainer">
                 <img src="img/testDriveLogo.svg" width="110px" height="110px" class="d-inline-block align-top testDriveLogo" alt="Social Media TestDrive Logo">
                 <span class="navbar-brand fancy d-none d-md-inline-block align-middle">
@@ -77,7 +77,7 @@
                     <li class="nav-item">
                         <a class="nav-link" href="for_researchers.html">For Researchers</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item active">
                         <a class="nav-link" href="testdrive_studies.html">TestDrive Studies</a>
                     </li>
                     <li class="nav-item">
