Fix bug: Button alignment previously misaligned on certain screen widths

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                     <h4>
                         Social Media TestDrive prepares young people for the online world through experiential learning in a simulated social media environment.
                     </h4>
-                    <div class="row flex-column align-items-lg-center align-content-lg-start">
+                    <div class="row flex-column align-content-lg-start">
                         <span> 
                             <a href='/modules.html' style="text-decoration:none;">
                                 <button class="nicelyRoundedButton" type="button" style="margin:3px 6px 3px 0;">
