--- a/webinars.html
+++ b/webinars.html
@@ -289,7 +289,12 @@
                             You can also join our e-mail listserv to receive future newsletters. Click <a href="mailto:TESTDRIVE-L-request@cornell.edu?Subject=Join" target="_blank" class="customHyperlink">here</a> and press "Send" to join.
                         </p>
                         <div class='row justify-content-start'>
-                            <div class='col-lg-8 align-items-center'>
+                            <div class='col-lg-10 align-items-center'>
+                                <a href='./img/newsletters/SMTD_7.pdf' target="_blank" style="text-decoration:none;">
+                                    <button type="button" class="nicelyRoundedButton webinarButton" style="margin:10px 6px 10px 0;">
+                                Newsletter #7
+                            </button>
+                                </a>
                                 <a href='./img/newsletters/SMTD_6.pdf' target="_blank" style="text-decoration:none;">
                                     <button type="button" class="nicelyRoundedButton webinarButton" style="margin:10px 6px 10px 0;">
                                 Newsletter #6
